--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,8 +1,8 @@
 # -  /𝐶𝑌𝛣𝛯𝑅 亇𝐻び𝑆𝐻𝜟𝚴 𝛩𝐹𝐹𝐼𝐶𝐼𝜟𝐿/
 
 FROM quay.io/suhailtechinfo/suhail-v2
-RUN git clone https://github.com/CYBER-THUSHAN/SHENU-QUEEN-MD /root/CYBER-THUSHAN
-WORKDIR /root/CYBER-THUSHAN/
+RUN git clone https://github.com/tharindusupun/QUEEN-AHINSA /root/tharindusupun
+WORKDIR /root/tharindusupun/
 RUN npm install
 EXPOSE 8000
 CMD ["npm","start","yarn" ]
